# CMake-Project-Template

./: .clang-format  CMakeLists.txt  README.md
